--- a/homepage.html
+++ b/homepage.html
@@ -147,7 +147,8 @@
               <img class="movie-list-item-img" src="img/kny.jpg" alt="" />
               <img class="movie-list-item-title" src="img/knytitle.png" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+               <form action="detail_film4.html"><button class="movie-list-item-button">Watch</button>
+           </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/kiki.jpg" alt="" />
@@ -285,3 +286,4 @@
     </div>
   </body>
 </html>
+
