--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
     <label for="remember">Remember me</label>
   </div>
   <button type="submit">Login</button>
+
+  <div class="agreement-radio">
+            <p>Apakah Anda menyetujui <a href="#">Syarat & Ketentuan?</a></p>
+            <div class="radio-group">
+              <label
+                ><input type="radio" name="agreement" value="yes" /> Ya, saya
+                setuju</label
+              >
+              <label
+                ><input type="radio" name="agreement" value="no" /> Tidak
+                setuju</label
+              >
+             </div>
 </form>
 
     </div>
