--- a/akunbaru.html
+++ b/akunbaru.html
@@ -24,15 +24,17 @@
                     <option value="pria">Pria</option>
                     <option value="wanita">Wanita</option>
                 </select>
-
-                <label>Kata Sandi</label>
+               </form>
+                
+                 <label>Kata Sandi</label>
                 <input type="password" placeholder="Masukkan kata sandi" autocomplete="new-password" required>
-
+<form action ="homepage.html" method="get" autocomplete="off">
                <button type="submit" class="btn">Daftar</button>
-
+</form>
                 <p class="login-text">Sudah punya akun? <a href="index.html">Masuk di sini</a></p>
-            </form>
+            
         </div>
     </div>
 </body>
 </html>
+
