--- a/homepage.html
+++ b/homepage.html
@@ -74,7 +74,7 @@
           inspires students to view their studies and lives from a more
           meaningful perspective.
         </p>
-        <form action="detail_film3.html"><button class="featured-button">WATCH</button></form>
+        <form action="detail_dps.html"><button class="featured-button">WATCH</button></form>
       </div>
       <div class="movie-list-container">
         <h1 class="movie-list-title">Drama Movies</h1>
@@ -84,7 +84,7 @@
               <img class="movie-list-item-img" src="img/lalaland.jpg" alt="" />
               <img class="movie-list-item-title" src="img/lalatitle.png" 
               alt="" />
-              <form action="detail_film.html">
+              <form action="detail_lalaland.html">
              <button class="movie-list-item-button">Watch</button>
              </form>
             </div>
@@ -96,25 +96,33 @@
               />
               <img class="movie-list-item-title" src="img/lwtitle.png" 
               alt=""/>
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_littlewoman.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/meangirls.jpg" alt="" />
               <img class="movie-list-item-title" src="img/meangirlstitle.png" "
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_meangirls.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/knivesout.jpg" alt="" />
               <img class="movie-list-item-title" src="img/kotitle.webp" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_knivesout.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/cmbyn.jpg" alt="" />
               <img class="movie-list-item-title" src="img/cmbyntitle.png" "
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_cmbyn.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
           </div>
         </div>
@@ -128,33 +136,42 @@
               <img class="movie-list-item-img" src="img/slamdunk.jpg" alt="" />
               <img class="movie-list-item-title" src="img/sdtitle.png" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_slamdunk.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/hmc.jpg" alt="" />
               <img class="movie-list-item-title" src="img/hmctitle.png" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_howls.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/totoro.jpg" alt="" />
               <img class="movie-list-item-title" src="img/totorotitle.png" "
               alt="" />
-              <form action="detail_film2.html"><button class="movie-list-item-button">Watch</button>
+              <form action="detail_totoro.html">
+              <button class="movie-list-item-button">Watch</button>
             </form>
               </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/kny.jpg" alt="" />
               <img class="movie-list-item-title" src="img/knytitle.png" " alt=""
               />
-               <form action="detail_film4.html"><button class="movie-list-item-button">Watch</button>
+               <form action="detail_kny.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
            </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/kiki.jpg" alt="" />
               <img class="movie-list-item-title" src="img/kikititle.png" "
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_kiki.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
           </div>
         </div>
@@ -175,7 +192,7 @@
           He's also on a mission to stop the powerful Jafar, who plots to steal
           the magic lamp that could make his deepest wishes come true.
         </p>
-        <button class="featured-button">WATCH</button>
+        <form action="detail_aladdin.html"><button class="featured-button">WATCH</button></form>
       </div>
 
       <div class="movie-list-container">
@@ -183,11 +200,12 @@
         <div class="movie-list-scroll">
           <div class="movie-list">
             <div class="movie-list-item">
-              <a href="detail_film.html"><img class="movie-list-item-img" src="img/lalaland.jpg" alt="" />
-              <img class="movie-list-item-title" src="img/lalatitle.png" "
+              <img class="movie-list-item-img" src="img/lalaland.jpg" alt="" />
+              <img class="movie-list-item-title" src="img/lalatitle.png" 
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
-              </a>
+              <form action="detail_lalaland.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img
@@ -195,27 +213,35 @@
                 src="img/littlewoman.jpg"
                 alt=""
               />
-              <img class="movie-list-item-title" src="img/lwtitle.png" "
+              <img class="movie-list-item-title" src="img/lwtitle.png" 
               alt=""/>
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_littlewoman.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/meangirls.jpg" alt="" />
               <img class="movie-list-item-title" src="img/meangirlstitle.png" "
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_meangirls.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/knivesout.jpg" alt="" />
               <img class="movie-list-item-title" src="img/kotitle.webp" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_knivesout.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/cmbyn.jpg" alt="" />
               <img class="movie-list-item-title" src="img/cmbyntitle.png" "
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_cmbyn.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
           </div>
         </div>
@@ -229,31 +255,42 @@
               <img class="movie-list-item-img" src="img/slamdunk.jpg" alt="" />
               <img class="movie-list-item-title" src="img/sdtitle.png" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_slamdunk.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/hmc.jpg" alt="" />
               <img class="movie-list-item-title" src="img/hmctitle.png" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_howls.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/totoro.jpg" alt="" />
               <img class="movie-list-item-title" src="img/totorotitle.png" "
               alt="" />
+              <form action="detail_totoro.html">
               <button class="movie-list-item-button">Watch</button>
-            </div>
+            </form>
+              </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/kny.jpg" alt="" />
               <img class="movie-list-item-title" src="img/knytitle.png" " alt=""
               />
-              <button class="movie-list-item-button">Watch</button>
+               <form action="detail_kny.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
+           </form>
             </div>
             <div class="movie-list-item">
               <img class="movie-list-item-img" src="img/kiki.jpg" alt="" />
               <img class="movie-list-item-title" src="img/kikititle.png" "
               alt="" />
-              <button class="movie-list-item-button">Watch</button>
+              <form action="detail_kiki.html">
+             <button class="movie-list-item-button">Watch</button>
+             </form>
             </div>
           </div>
         </div>
@@ -286,4 +323,5 @@
     </div>
   </body>
 </html>
+
 
